动态图，判断只有一张处理。。提问后，返回回显处理，

--- a/wechat/src/main/webapp/xcview/html/physician/css/demos.css
+++ b/wechat/src/main/webapp/xcview/html/physician/css/demos.css
@@ -9220,12 +9220,23 @@
     .am-gallery-overlay .am-gallery-item img{
         width:2.26rem;
         height:auto;
-        transform: scale(2.4,2.4);  /* 缩放比例 */
-        margin: 0.3rem -0.3rem;  /* 距离上下距离 */ 
+        /* transform: scale(2.4,2.4); */  /* 缩放比例 */
+        /* margin: 0.3rem -0.3rem; */  /* 距离上下距离 */ 
     }
-    .transform_img{
-        transform: scale(3,3);  /* 缩放比例 */
-        margin: 0.3rem -0.3rem;  /* 距离上下距离 */
+    .transform_img{             /* 多张图片添加 */
+        transform: scale(2.4,2.4);  /* 缩放比例 */
+        margin: 0.3rem -0.3rem; /* 距离上下距离 */
+    }
+    .itransforms_li{  /*单张图片添加 */
+        max-width: 4.26rem !important;
+        height: 100% !important;
+        width: 100% !important;
+    }
+    .pic_img_one{
+        /*width: 3.26rem !important;*/
+        max-width: 4.26rem !important;
+        height: 100% !important;
+        width: 100% !important;
     }
     .am-gallery-overlay .am-gallery-title{
         font-size:1.4rem;
