--- a/online-manager/src/main/webapp/css/style.css
+++ b/online-manager/src/main/webapp/css/style.css
@@ -166,7 +166,7 @@ span.glyphicon.glyphicon-triangle-bottom {
 }
 .table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th{
     background:transparent;
-    background: #f9f9f9;
+    background: #fff;
 }
 .table>tbody>tr:hover{
     background: #f1f1f1;
@@ -388,5 +388,7 @@ span.glyphicon.glyphicon-triangle-bottom {
 }
 
 .ui-dialog .ui-button{
-	border:none;outline:none
+	border:none;
+	outline:none;
+	
 }
