发现--师承，我要报名优化修改。中医师，下线课，ui优化。学习--我的课程--已结束课程--刷新修改。中医师--申请弟子修改。

--- a/wechat/src/main/webapp/xcview/css/my_study.css
+++ b/wechat/src/main/webapp/xcview/css/my_study.css
@@ -194,20 +194,21 @@ text-align: right;
     height: 1.22rem;
 }
 .little_img{
-width: 0.32rem;
-height: 0.32rem;
-position: absolute;
-top: 0.13rem;
-left: 0.13rem;	
+	width: 0.32rem;
+	height: 0.32rem;
+	position: absolute;
+	top: 0.13rem;
+	left: 0.13rem;	
 }
 .text_mores{
 	margin-bottom: 0.1rem;
 }
 .text_more{
-display: -webkit-box;
--webkit-box-orient: vertical;
--webkit-line-clamp: 1;
-overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+	overflow: hidden;
+	margin-bottom: 0.1rem;
 
 }
 .text_more .span{
