--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -589,6 +589,7 @@ header{
 	position: fixed;
 	bottom: 0;
     border-top: 1px solid #f0f0f0;
+    display: none;
 }
 .general_border{
 	/* margin-top: 0.3rem;
@@ -604,7 +605,7 @@ header{
 	text-align: center;
 	font-size: 0.3rem;
 	color: #FFFFFF;
-	background: #00BC12;
+	/*background: #00BC12;*/
 	border-radius: 100px;
 	margin-top: 0.13rem;
 }
