--- a/online-web/src/main/webapp/web/css/live-room/live-room.css
+++ b/online-web/src/main/webapp/web/css/live-room/live-room.css
@@ -517,13 +517,6 @@ input::-webkit-input-placeholder{
     -moz-transform-origin: center;
     display: none;
 }
-
-
-
-
-
-
-
 .select-operation{
 	width: 280px;
 	margin: 0 auto;
@@ -534,6 +527,7 @@ input::-webkit-input-placeholder{
 .select-operation li{
 	float: left;
 	margin-right: 33px;
+	cursor: pointer;
 }
 .select-operation li .play-time{
 	color: white;
@@ -554,6 +548,43 @@ input::-webkit-input-placeholder{
 	height: 36px;
 	background: #00BC12;
 	border-radius: 100px;
+}
+.setup-modal{
+	width: 300px;
+	/*height: 300px;*/
+	background: white;
+	position: fixed;
+	z-index: 50;
+	left: 50%;
+	top: 50%;
+	transform:translate(-50%,-50%);
+	padding: 20px 0 20px 20px;
+}
+.comment-setup {
+	margin-bottom: 20px;
+}
+.comment-setup select{
+	width: 210px;
+	border: 1px solid #d7d3d3;
+	outline: none;
+	height: 25px;
+	line-height: 21px;
+}
+.comment-setup button{
+	width: 80px;
+	height: 30px;
+	background: #00bc12;
+	margin-right: 20px;
+	margin-right: 20px;
+    border: 0;
+    color: white;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+.comment-setup .cancel{
+	float: right;
+    background: #a5a5a5;
+    margin-right: 20px;
 }
 /*学员区*/
 .video-wrap{
