--- a/online-web/src/main/webapp/web/css/live-room/live-room.css
+++ b/online-web/src/main/webapp/web/css/live-room/live-room.css
@@ -161,6 +161,7 @@ input::-webkit-input-placeholder{
 }
 .content-chat{
 	height: 100%;
+	position: relative;
 }
 .comment-padding{
 	padding: 0;
@@ -705,6 +706,21 @@ input::-webkit-input-placeholder{
 	width: 100%;
 	height: 25px;
 	margin-top: 10px;
+}
+.expression-select{
+	position: absolute;
+	width: 100%;
+	padding: 10px 0 0 10px;
+	background: white;
+	left: 0;
+	bottom: 110px;	
+}
+.expression-list li{
+	float: left;
+}
+.expression-list li img{
+	width: 20px;
+	
 }
 .input-main{
 	width: 100%;
