直播间--添加表情包。。

--- a/online-web/src/main/webapp/web/js/live-streamin-document/jquery.iviewer.css
+++ b/online-web/src/main/webapp/web/js/live-streamin-document/jquery.iviewer.css
@@ -13,11 +13,11 @@
 }
 
 .iviewer_cursor {
-    cursor: url(img/hand.cur) 6 8, pointer;
+    cursor: url(/web/js/live-streamin-document/img/hand.cur) 6 8, pointer;
 }
 
 .iviewer_drag_cursor {
-    cursor: url(img/grab.cur) 6 8, pointer;
+    cursor: url(/web/js/live-streamin-document/img/grab.cur) 6 8, pointer;
 }
 
 .iviewer_button {
@@ -29,22 +29,22 @@
 
 .iviewer_zoom_in {
     left: 20px;
-    background: url(img/iviewer.zoom_in.gif) center center no-repeat;
+    background: url(/web/js/live-streamin-document/img/iviewer.zoom_in.gif) center center no-repeat;
 }
 
 .iviewer_zoom_out {
     left: 55px;
-    background: url(img/iviewer.zoom_out.gif) center center no-repeat;
+    background: url(/web/js/live-streamin-document/img/iviewer.zoom_out.gif) center center no-repeat;
 }
 
 .iviewer_zoom_zero {
     left: 90px;
-    background: url(img/iviewer.zoom_zero.gif) center center no-repeat;
+    background: url(/web/js/live-streamin-document/img/iviewer.zoom_fit.gif) center center no-repeat;
 }
 
 .iviewer_zoom_fit {
     left: 125px;
-    background: url(img/iviewer.zoom_fit.gif) center center no-repeat;
+    background: url(/web/js/live-streamin-document/img/iviewer.zoom_zero.gif) center center no-repeat;
 }
 
 .iviewer_zoom_status {
@@ -58,10 +58,10 @@
 
 .iviewer_rotate_left {
     left: 227px;
-    background: #fff url(img/iviewer.rotate_left.png) center center no-repeat;
+    background: #fff url(/web/js/live-streamin-document/img/iviewer.rotate_left.png) center center no-repeat;
 }
 
 .iviewer_rotate_right {
     left: 262px;
-    background: #fff url(img/iviewer.rotate_right.png) center center no-repeat;
+    background: #fff url(/web/js/live-streamin-document/img/iviewer.rotate_right.png) center center no-repeat;
 }
