--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -791,3 +791,44 @@ word-break:break-all;
         background-color: #fff;  
         z-index: 1;  
     }  
+    
+/*语音直播弹出二维码*/
+.video-live{
+	width: 300px;
+	background: white;
+	position: fixed;
+	z-index: 999;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+}
+.video-top{
+	width: 100%;
+	height: 86px;
+	background: #E2B95A;
+	text-align: center;
+	line-height: 86px;
+	color: white;
+	font-size: 20px;
+	margin-bottom: 20px;
+
+}
+.video-live .video-qr-code{
+	width: 120px;
+	height: 120px;
+	margin: 0 auto;
+}
+.video-live .video-tip{
+	text-align: center;
+	margin: 15px 0 0;
+	font-size: 14px;
+	
+}
+.video-live .video-tip2{
+	 text-align: center;
+    padding: 3px 0 10px;
+	font-size: 14px;
+    
+}
+   
