--- a/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
+++ b/wechat/src/main/webapp/xcview/css/physician/voice_broadcast.css
@@ -636,3 +636,85 @@ body{
 }
 
 /*底部结束*/
+
+
+/*彈幕開始*/
+.sendBox{
+    font-size: .24rem;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: .8rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.sendBox .input{
+    flex:1;
+}
+#sendInput{
+    width: 100%;
+    height: 100%;
+    padding-left: .2rem;
+    box-sizing: border-box;
+}
+.sendbtn{
+    text-align: center;
+    width: 2rem;
+    height:100%;
+    background: green;
+    color: #fff;
+}
+
+.sendbtn a{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    line-height: .8rem;
+}
+.msgCont{
+    max-width: 4rem;
+    /*height: 2.6rem;*/
+    /*background: #007AFF;*/
+    position: fixed;
+    right: 0;
+    bottom: 2.38rem;
+    /*overflow: hidden;*/
+}
+.msgItem{
+    display: flex;
+    font-size: .24rem;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.50);
+    /*background: rgba(0,0,0,.7);*/
+    color: #fff;
+    border-radius: 5px;
+    padding: 0.12rem 0.17rem;
+    box-sizing: border-box;
+    margin-bottom: .2rem;
+}
+.msgItem .text{
+    flex: 1;
+    min-width: 0.6rem;
+    max-width: 3.1rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    word-wrap: break-word;
+}
+.msgItem  .avatar{
+    width: .4rem;
+    height: .4rem;
+}
+.msgItem  .avatar img{
+    width: .4rem;
+    height: .4rem;
+    border-radius: 100px;
+
+}
+
+/*彈幕結束*/
