--- a/online-web/src/main/webapp/web/css/ResidentDoctor.css
+++ b/online-web/src/main/webapp/web/css/ResidentDoctor.css
@@ -343,7 +343,7 @@ a {
 	font-size: 14px;
 }
 #doc_Distinguish .bottomContent .personIntroduct img{
-	max-width: 500;
+	max-width: 500px;
 }
 #doc_Distinguish .bottomContent .doc_address select{
 	width: 240px;
