后台管理注释100%

--- a/online-manager/src/main/webapp/bootstrap/assets/css/ace.css
+++ b/online-manager/src/main/webapp/bootstrap/assets/css/ace.css
@@ -5160,7 +5160,7 @@ body.mob-safari .sidebar.sidebar-fixed {
 .footer {
   padding-top: 75px;
   height: 0;
-  width: 100%;
+  /*width: 100%;*/
   background: #eceff5;
   margin-left: 190px;
 }
