--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -483,6 +483,7 @@ p{
 	font-size: 0.26rem;
 	color: #333333;
 	float: left;
+	width: 100%;
 }
 .response{
 	font-size: 0.26rem;
@@ -2056,16 +2057,16 @@ table tr td img{
     background: #000;
 }
 .remove_copy_main{
-	width: 6rem;
-    height: 1rem;
+	width: 6.98rem;
+    height: 0.8rem;
     margin: 0 auto;
     background: #fff;
     position: fixed;
-    top: 50%;
+    bottom: 1.3rem;
     left: 50%;
     z-index: 9999991;
     margin-top: -0.5rem;
-    margin-left: -3rem;
+    margin-left: -3.49rem;
     border-radius: 4px;
 }
 .copy{
@@ -2078,10 +2079,31 @@ table tr td img{
 }
 .remove{
 	width: 100%;
-	height: 1rem;
-	line-height: 1rem;
-	font-size: 0.3rem;
-	text-indent: 0.4rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.3rem;
+    text-align: center;
+}
+
+.remove_copy_main_hide{
+	width: 6.98rem;
+    height: 0.8rem;
+    margin: 0 auto;
+    background: #fff;
+    position: fixed;
+    bottom: 0.3rem;
+    left: 50%;
+    z-index: 9999991;
+    margin-top: -0.5rem;
+    margin-left: -3.49rem;
+    border-radius: 4px;
+}
+.remove__hide{
+	width: 100%;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.3rem;
+    text-align: center;
 }
 /*点击回复出现删除复制结束*/
 
