--- a/online-web/src/main/webapp/web/css/registration_sites.css
+++ b/online-web/src/main/webapp/web/css/registration_sites.css
@@ -78,7 +78,17 @@
     outline: none;
     padding-left: 5px;
 }
-
+.center .active{
+	border: 1px solid red !important;
+}
+.center .error-tip{
+    font-size: 14px;
+    color: #FF4012;
+    line-height: 30px;
+    background: url(/web/images/icons/tanhao.png) no-repeat left center;
+    margin-left: 10px;
+    padding-left: 20px;
+}
 .tel{
 	margin-bottom: 30px;
 }
