[enhancement]优化文档演示

--- a/online-web/src/main/webapp/web/css/live-room/live-room.css
+++ b/online-web/src/main/webapp/web/css/live-room/live-room.css
@@ -396,8 +396,8 @@ input::-webkit-input-placeholder{
 }
 .select-document-wrap .modal-list{
 	padding-top: 1px;
-	/*overflow-y: auto;*/
-	/*overflow-x: hidden;*/
+	overflow-y: auto;
+	overflow-x: hidden;
 	height: 100%;
 }
 .select-document-wrap .modal-list li{
